; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_dpp.c_dpp_copy_csign.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_dpp.c_dpp_copy_csign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dpp_authentication = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dpp_authentication*, i32*)* @dpp_copy_csign to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dpp_copy_csign(%struct.dpp_authentication* %0, i32* %1) #0 {
  %3 = alloca %struct.dpp_authentication*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.dpp_authentication* %0, %struct.dpp_authentication** %3, align 8
  store i32* %1, i32** %4, align 8
  store i8* null, i8** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @i2d_PUBKEY(i32* %7, i8** %5)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp sle i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %24

12:                                               ; preds = %2
  %13 = load %struct.dpp_authentication*, %struct.dpp_authentication** %3, align 8
  %14 = getelementptr inbounds %struct.dpp_authentication, %struct.dpp_authentication* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @wpabuf_free(i32 %15)
  %17 = load i8*, i8** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @wpabuf_alloc_copy(i8* %17, i32 %18)
  %20 = load %struct.dpp_authentication*, %struct.dpp_authentication** %3, align 8
  %21 = getelementptr inbounds %struct.dpp_authentication, %struct.dpp_authentication* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 @OPENSSL_free(i8* %22)
  br label %24

24:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @i2d_PUBKEY(i32*, i8**) #1

declare dso_local i32 @wpabuf_free(i32) #1

declare dso_local i32 @wpabuf_alloc_copy(i8*, i32) #1

declare dso_local i32 @OPENSSL_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
